# night-train-target-network

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
backend/: .dockerignore  DEVELOPMENT.md  Dockerfile  REST_API_TARGET_STRUCTURE.md  main.py  pyproject.toml
backend/adapters/: auth_repository.py  data_loader_from_db.py  data_loader_from_spreadsheet.py  feedback_repository.py  mailer.py  proposal_repository.py
backend/api/: README.md  auth.py  auth_middleware.py  auth_oidc.py  auth_utils.py  cost_rev_calc.py  dependencies.py  email_sender.py  evaluation.py  feedback.py  health.py  limiter.py  params.py  proposals.py  route.py  route_builder.py  scenarios.py
backend/api/helpers/: dependencies.py  evaluation_serialize.py  feedback_serialize.py  params_serialize.py  proposal_serialize.py  route_serialize.py  scenario_serialize.py  serialize.py
backend/api/routes/: data.py  evaluate.py  params.py
backend/db/: README.md  migrate.py
backend/db/dev/: .env.example  Dockerfile  docker-compose.yml  ontd_loader.py  seed.py  (+4 more)
backend/docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
backend/models/: README.md  params.py  readme.md  utils.py
backend/scripts/: test_auth_chain.py  test_data_loader_from_spreadsheet.py  test_evaluate.py  test_evaluation_calc.py  test_feedback_api.py  test_params.py  test_rail_router.py  test_route_plan.py  test_run_model.py  test_scenario_comparison_paris_berlin.py  test_scenarios.py  test_spreadsheet_connection.py  test_timetable_comparison_hamburg_copenhagen.py
backend/tests/: README.md  conftest.py  helpers.py  test_01_stack_health.py  test_02_db_seed.py  test_03_loader.py  test_04_versioning.py  test_10_params_api.py  test_11_scenarios_api.py  test_20_route_plan_api.py  test_21_route_plan_content.py  test_30_evaluation_api.py  test_31_evaluation_content.py  test_40_pipeline.py  test_50_proposals_api.py  test_60_feedback_api.py  test_70_auth_api.py  test_71_auth_units.py  test_api_health.py  test_auth.py  test_data_load.py  test_data_load_patched.py  test_density.py  test_energy.py  test_evaluate.py  test_health.py  test_loader.py  test_pipeline.py  test_route.py  test_route_routing.py  test_versioning.py
(+138 files in other folders)
