[project]
name = "night-train-target-network"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "gunicorn>=23.0.0",
    "gspread>=6.2.1",
    "psycopg2-binary>=2.9.12",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "shapely>=2.1.2",
]

[project.optional-dependencies]
dev = [
    "black==25.1",
    "jupyterlab>=4.6.0",
    "pandas>=3.0.3",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]