[project]
name = "night-train-target-network"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-limiter>=3.5",
    "gunicorn>=23.0.0",
    "gspread>=6.2.1",
    "psycopg2-binary>=2.9.12",
    "pyjwt[crypto]>=2.10",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "shapely>=2.1.2",
    "pandas-stubs>=3.0.3.260530",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.21",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.10",
    "pandas>=3.0.3",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
